# toktrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Makefile  README.ko.md  README.md  ROADMAP.md  demo.tape  release-please-config.json
.claude/: settings.json
.claude/ai-context/: CLAUDE.md  architecture.md  conventions.md
.claude/hooks/: clarify-first.sh  impl-after-plan.sh  implement-guard.sh  plan-provided-detector.sh  post-tool-implement-check.sh  session-metadata.sh  skill-chain-detector.sh  skill-chain-enforcer.sh  skill-to-sidecar.sh
.claude/skills/clarify/: SKILL.md
.claude/skills/clarify/deep/: DEEP.md
.claude/skills/implement/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/track/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/wrap/: SKILL.md
.dev/: DECISIONS.md
.githooks/: pre-commit
.github/workflows/: release-please.yml  release.yml
benches/: parser_bench.rs
docs/benchmarks/: README.md
docs/planning/: 20260126-task-breakdown.md
npm/: README.md  package.json
src/: main.rs
src/cli/: annotate.rs  mod.rs
src/parsers/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/services/: aggregator.rs  cache.rs  data_loader.rs  mod.rs  normalizer.rs  pricing.rs  session_metadata.rs  update_checker.rs
src/tui/: app.rs  theme.rs
src/tui/widgets/: daily.rs  heatmap.rs  help.rs  mod.rs  model_breakdown.rs  models.rs  overview.rs  quit_confirm.rs  session_detail.rs  sessions.rs  source_detail.rs  spinner.rs  stats.rs  tabs.rs  update_popup.rs
src/types/: error.rs  mod.rs  usage.rs
tests/fixtures/: claude-sample.jsonl
tests/fixtures/codex/: multi-turn-session.jsonl  sample-session.jsonl
tests/fixtures/gemini/tmp123/chats/: session-abc123.json
tests/fixtures/opencode/storage/message/ses_test/: msg_001.json  msg_002.json  msg_003_no_tokens.json
