[package]
name = "toktrack"
version = "0.1.40"
edition = "2021"
description = "Ultra-fast token & cost tracker for Claude Code, Codex CLI, and Gemini CLI"
license = "MIT"
repository = "https://github.com/mag123c/toktrack"
keywords = ["claude-code", "token-tracker", "ai-cost", "tui", "llm"]
categories = ["command-line-utilities"]

[dependencies]
# JSON parsing (SIMD optimized)
simd-json = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Async & Parallel
rayon = "1.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Paths
directories = "5"
glob = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP (for LiteLLM pricing) - rustls for cross-compile compatibility
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# File locking (for cache race condition prevention)
fs2 = "0.4"

# Terminal theme detection (light/dark background)
terminal-light = "1"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Temp files for tests
tempfile = "3"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
